--- a/Port32U4.vcxproj.filters
+++ b/Port32U4.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Neopixel\Adafruit_NeoPixel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameMode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DuinoTagV2.h">
