Compiles, but crashes on boot.

--- a/Port32U4.vcxproj.filters
+++ b/Port32U4.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="GameMode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Neopixel\esp8266.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DuinoTagV2.h">
