--- a/Port32U4.vcxproj
+++ b/Port32U4.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="FlexiTimer\FlexiTimer2.cpp" />
     <ClCompile Include="Neopixel\Adafruit_NeoPixel.cpp" />
     <ClCompile Include="GameMode.cpp" />
+    <ClCompile Include="Sound.cpp" />
     <ClCompile Include="ToneAC\toneAC.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -141,6 +142,7 @@
     <ClInclude Include="FlexiTimer\FlexiTimer2.h" />
     <ClInclude Include="GameMode.h" />
     <ClInclude Include="Neopixel\Adafruit_NeoPixel.h" />
+    <ClInclude Include="Sound.h" />
     <ClInclude Include="ToneAC\toneAC.h" />
     <ClInclude Include="__vm\.Github.vsarduino.h" />
     <ClInclude Include="__vm\.port32U4.vsarduino.h" />
