Added some priliminary wifi, split bitshift into more files

--- a/Port32U4.vcxproj.filters
+++ b/Port32U4.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="MilesDecode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LaserWiFi.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Bitshift.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DuinoTagV2.h">
@@ -75,6 +81,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MilesDecode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LaserWiFi.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Bitshift.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
